--- a/src/jupyter/common_ops.ipynb
+++ b/src/jupyter/common_ops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c207511-0fe4-4633-9124-a5c3fe025b8f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "25188f97-84f6-46ac-b9ef-943134094344",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "812212bf-65bd-488d-a5c1-dea4ec3550a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/03/31 16:18:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "# Start spark session. Not specifying what we want for executor and core resources, gets us all available resources.\n",
     "# Default for 'spark.executor.memory' (memory per worker) is 1GB. Need to bump that up explicitely, if we want more.\n",
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fb1d0c91-a370-4b18-ae04-997db729062c",
    "metadata": {},
    "outputs": [],
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8cca2f4f-b20e-433d-862a-72db4464b8ae",
    "metadata": {},
    "outputs": [],
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8a671b61-12ad-4383-962d-16737edbb6da",
    "metadata": {},
    "outputs": [],
@@ -147,10 +158,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "865507a3-0400-48b9-84d8-3a7afaca1f98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- person_id: string (nullable = false)\n",
+      " |-- first_name: string (nullable = false)\n",
+      " |-- last_name: string (nullable = false)\n",
+      " |-- gender: string (nullable = false)\n",
+      " |-- date_of_birth: date (nullable = false)\n",
+      " |-- children_ages: array (nullable = false)\n",
+      " |    |-- element: integer (containsNull = true)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 1:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+---------+------+-------------+-------------+\n",
+      "|person_id|first_name|last_name|gender|date_of_birth|children_ages|\n",
+      "+---------+----------+---------+------+-------------+-------------+\n",
+      "|001      |Willy     |Walker   |M     |1971-03-18   |[21, 23]     |\n",
+      "|002      |Marry     |Brown    |F     |1974-03-19   |[4, 11, 15]  |\n",
+      "|003      |Harry     |Snow     |M     |1965-03-20   |[23, 25]     |\n",
+      "|004      |Joey      |Jollymore|M     |1971-03-13   |[12, 15, 17] |\n",
+      "|005      |Tim       |Horton   |M     |1963-03-14   |[11, 15]     |\n",
+      "|006      |Jenny     |Purple   |F     |1971-03-14   |[14, 18, 21] |\n",
+      "|007      |Ronald    |McDonald |M     |1972-03-14   |[11, 15]     |\n",
+      "|008      |Oscar     |Grouch   |M     |1968-03-14   |[20, 22]     |\n",
+      "|009      |Kermit    |Frog     |M     |1969-03-14   |[19, 25]     |\n",
+      "|010      |Anna      |Green    |F     |1973-03-14   |[13, 15]     |\n",
+      "+---------+----------+---------+------+-------------+-------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# This data is mostly tabular in format.  \n",
@@ -173,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d7571493-7594-483f-b125-e78ec9cd3873",
    "metadata": {},
    "outputs": [],
@@ -205,10 +267,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3508054c-b682-4783-b3cd-b30adc2ecf14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- person_id: string (nullable = false)\n",
+      " |-- vehicle_id: string (nullable = false)\n",
+      " |-- vehicle_name: string (nullable = false)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+------------+\n",
+      "|person_id|vehicle_id|vehicle_name|\n",
+      "+---------+----------+------------+\n",
+      "|001      |v-001     |Honda Civic |\n",
+      "|001      |v-002     |Honda Fit   |\n",
+      "|001      |v-003     |Honda Ruckus|\n",
+      "|001      |v-004     |Toyota Camry|\n",
+      "|002      |v-005     |Toyota Camry|\n",
+      "|002      |v-005     |Toyota Rav4 |\n",
+      "|002      |v-010     |Geo Metro   |\n",
+      "|005      |v-006     |Doge Caravan|\n",
+      "|005      |v-007     |Toyota Camry|\n",
+      "|007      |v-008     |Honda Civic |\n",
+      "+---------+----------+------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print schema and some sample data for the vehicle dataframe.\n",
     "\n",
@@ -226,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "805b90c9-612b-4ce2-9d4c-4077d62c11f1",
    "metadata": {},
    "outputs": [],
@@ -241,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b95274d2-e0b6-4318-afef-69e097a069fe",
    "metadata": {},
    "outputs": [],
@@ -253,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9ca1cc86-8e8f-4af0-b6b6-49c94ca4a2c1",
    "metadata": {},
    "outputs": [],
@@ -272,10 +375,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "918014d0-b50a-46d1-a4f7-7ffcec903c5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 5:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+\n",
+      "|person_id|first_name|last_name|gender|date_of_birth|children_ages|person_age|birth_dow|fname_length|\n",
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+\n",
+      "|001      |Willy     |Walker   |M     |1971-03-18   |[21, 23]     |51        |5        |5           |\n",
+      "|002      |Marry     |Brown    |F     |1974-03-19   |[4, 11, 15]  |48        |3        |5           |\n",
+      "|003      |Harry     |Snow     |M     |1965-03-20   |[23, 25]     |57        |7        |5           |\n",
+      "|004      |Joey      |Jollymore|M     |1971-03-13   |[12, 15, 17] |51        |7        |4           |\n",
+      "|005      |Tim       |Horton   |M     |1963-03-14   |[11, 15]     |59        |5        |3           |\n",
+      "|006      |Jenny     |Purple   |F     |1971-03-14   |[14, 18, 21] |51        |1        |5           |\n",
+      "|007      |Ronald    |McDonald |M     |1972-03-14   |[11, 15]     |50        |3        |6           |\n",
+      "|008      |Oscar     |Grouch   |M     |1968-03-14   |[20, 22]     |54        |5        |5           |\n",
+      "|009      |Kermit    |Frog     |M     |1969-03-14   |[19, 25]     |53        |6        |6           |\n",
+      "|010      |Anna      |Green    |F     |1973-03-14   |[13, 15]     |49        |4        |4           |\n",
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "# Show the transformed dataframe. \n",
     "# We should see the newly created columns : [person_age, birth_dow, fname_length]\n",
@@ -285,10 +424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e52917ba-fc9e-458d-bcd3-bd2216804565",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(i_list)>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Do some transformations with SparkSQL.\n",
     "\n",
@@ -305,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fa101b9e-6de5-4fc8-9e21-145b7ad5b075",
    "metadata": {},
    "outputs": [],
@@ -317,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "cc982d70-fc36-48a7-ad6b-3a3c42dc5d3d",
    "metadata": {},
    "outputs": [],
@@ -336,10 +486,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "09e778c0-902f-4ad8-9d8a-fbf0b2667232",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+----------------+\n",
+      "|person_id|first_name|last_name|gender|date_of_birth|children_ages|person_age|birth_dow|fname_length|eldest_child_age|\n",
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+----------------+\n",
+      "|001      |Willy     |Walker   |M     |1971-03-18   |[21, 23]     |51        |5        |5           |23              |\n",
+      "|002      |Marry     |Brown    |F     |1974-03-19   |[4, 11, 15]  |48        |3        |5           |15              |\n",
+      "|003      |Harry     |Snow     |M     |1965-03-20   |[23, 25]     |57        |7        |5           |25              |\n",
+      "|004      |Joey      |Jollymore|M     |1971-03-13   |[12, 15, 17] |51        |7        |4           |17              |\n",
+      "|005      |Tim       |Horton   |M     |1963-03-14   |[11, 15]     |59        |5        |3           |15              |\n",
+      "|006      |Jenny     |Purple   |F     |1971-03-14   |[14, 18, 21] |51        |1        |5           |21              |\n",
+      "|007      |Ronald    |McDonald |M     |1972-03-14   |[11, 15]     |50        |3        |6           |15              |\n",
+      "|008      |Oscar     |Grouch   |M     |1968-03-14   |[20, 22]     |54        |5        |5           |22              |\n",
+      "|009      |Kermit    |Frog     |M     |1969-03-14   |[19, 25]     |53        |6        |6           |25              |\n",
+      "|010      |Anna      |Green    |F     |1973-03-14   |[13, 15]     |49        |4        |4           |15              |\n",
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Show the transformed dataframe. \n",
@@ -350,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "be3476c4-c64c-4a4d-9798-59157502d047",
    "metadata": {},
    "outputs": [],
@@ -361,10 +540,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "53bbf7a0-d3cd-4d23-8a93-b3624f98273a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 9:=======================================>                   (4 + 2) / 6]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------------+\n",
+      "|person_id|vehicle_count|\n",
+      "+---------+-------------+\n",
+      "|      001|            4|\n",
+      "|      002|            3|\n",
+      "|      010|            1|\n",
+      "|      007|            1|\n",
+      "|      005|            2|\n",
+      "+---------+-------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Need list of person_ids and their vehicle counts.\n",
@@ -383,10 +593,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "21147309-9ce7-40f3-93b7-b028e53bcc8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+----------------+-------------+\n",
+      "|person_id|first_name|last_name|gender|date_of_birth|children_ages|person_age|birth_dow|fname_length|eldest_child_age|vehicle_count|\n",
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+----------------+-------------+\n",
+      "|      001|     Willy|   Walker|     M|   1971-03-18|     [21, 23]|        51|        5|           5|              23|            4|\n",
+      "|      002|     Marry|    Brown|     F|   1974-03-19|  [4, 11, 15]|        48|        3|           5|              15|            3|\n",
+      "|      003|     Harry|     Snow|     M|   1965-03-20|     [23, 25]|        57|        7|           5|              25|            0|\n",
+      "|      004|      Joey|Jollymore|     M|   1971-03-13| [12, 15, 17]|        51|        7|           4|              17|            0|\n",
+      "|      005|       Tim|   Horton|     M|   1963-03-14|     [11, 15]|        59|        5|           3|              15|            2|\n",
+      "|      006|     Jenny|   Purple|     F|   1971-03-14| [14, 18, 21]|        51|        1|           5|              21|            0|\n",
+      "|      007|    Ronald| McDonald|     M|   1972-03-14|     [11, 15]|        50|        3|           6|              15|            1|\n",
+      "|      008|     Oscar|   Grouch|     M|   1968-03-14|     [20, 22]|        54|        5|           5|              22|            0|\n",
+      "|      009|    Kermit|     Frog|     M|   1969-03-14|     [19, 25]|        53|        6|           6|              25|            0|\n",
+      "|      010|      Anna|    Green|     F|   1973-03-14|     [13, 15]|        49|        4|           4|              15|            1|\n",
+      "+---------+----------+---------+------+-------------+-------------+----------+---------+------------+----------------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Join person_df and person_vehicle_count_df dataframes. \n",
@@ -412,10 +651,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1d74770a-9d94-4e66-adf0-0eb64dcf9d73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+------------------------+-------------+\n",
+      "|person_id|person_name (last,first)|vehicle_count|\n",
+      "+---------+------------------------+-------------+\n",
+      "|      005|             Horton, Tim|            2|\n",
+      "|      001|           Walker, Willy|            4|\n",
+      "|      002|            Brown, Marry|            3|\n",
+      "|      010|             Green, Anna|            1|\n",
+      "|      007|        McDonald, Ronald|            1|\n",
+      "+---------+------------------------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# People with more than 1 vehicle\n",
@@ -431,10 +687,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ba222252-6491-445a-b92b-21cc44fec0c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+------------------------+-------------+\n",
+      "|person_id|person_name (last,first)|vehicle_count|\n",
+      "+---------+------------------------+-------------+\n",
+      "|      003|             Snow, Harry|            0|\n",
+      "|      004|         Jollymore, Joey|            0|\n",
+      "|      009|            Frog, Kermit|            0|\n",
+      "|      006|           Purple, Jenny|            0|\n",
+      "|      008|           Grouch, Oscar|            0|\n",
+      "+---------+------------------------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# People who don't have a vehicle\n",
     "\n",
@@ -456,10 +729,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4c6f725f-638c-48be-8452-44d0e12adfe3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+---------+------+-------------+----+\n",
+      "|person_id|first_name|last_name|gender|vehicle_count|rank|\n",
+      "+---------+----------+---------+------+-------------+----+\n",
+      "|      001|     Willy|   Walker|     M|            4|   1|\n",
+      "|      005|       Tim|   Horton|     M|            2|   2|\n",
+      "|      002|     Marry|    Brown|     F|            3|   1|\n",
+      "|      010|      Anna|    Green|     F|            1|   2|\n",
+      "+---------+----------+---------+------+-------------+----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Ref : https://databricks.com/blog/2015/07/15/introducing-window-functions-in-spark-sql.html\n",
@@ -487,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3668c1c6-c979-445b-a0a4-92b12dc6fe5d",
    "metadata": {},
    "outputs": [],
