--- a/src/jupyter/2_car_data_predictions_MLlib.ipynb
+++ b/src/jupyter/2_car_data_predictions_MLlib.ipynb
@@ -43,7 +43,7 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/03/31 16:16:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/04/01 14:34:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -56,7 +56,53 @@
     "            .appName(\"2_car_data_predictions_MLlib_jupyter\")\\\n",
     "            .config(\"spark.executor.memory\", \"3G\")\\\n",
     "            .config(\"spark.driver.memory\", \"3G\")\\\n",
+    "            .config(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")\\\n",
     "            .getOrCreate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e5025afb-2a82-4882-adee-8b111d4c9d31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spark Session configuration : \n",
+      "===\n",
+      "('spark.driver.memory', '3G')\n",
+      "('spark.app.startTime', '1648834480119')\n",
+      "('spark.driver.host', '20c341bc6e66')\n",
+      "('spark.driver.port', '37125')\n",
+      "('spark.executor.id', 'driver')\n",
+      "('spark.app.id', 'app-20220401143442-0006')\n",
+      "('spark.executor.memory', '3G')\n",
+      "('spark.rdd.compress', 'True')\n",
+      "('spark.master', 'spark://spark-master:7077')\n",
+      "('spark.app.name', '2_car_data_predictions_MLlib_jupyter')\n",
+      "('spark.serializer.objectStreamReset', '100')\n",
+      "('spark.submit.pyFiles', '')\n",
+      "('spark.submit.deployMode', 'client')\n",
+      "('spark.sql.warehouse.dir', 'file:/src/jupyter/spark-warehouse')\n",
+      "('spark.ui.showConsoleProgress', 'true')\n",
+      "('spark.sql.execution.arrow.pyspark.enabled', 'true')\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the Spark session configuration. \n",
+    "\n",
+    "print(\"Spark Session configuration : \")\n",
+    "\n",
+    "print('===')\n",
+    "\n",
+    "for e in spark.sparkContext.getConf().getAll():\n",
+    "    print(e)\n",
+    "\n",
+    "print('===')\n"
    ]
   },
   {
@@ -69,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "865507a3-0400-48b9-84d8-3a7afaca1f98",
    "metadata": {},
    "outputs": [
@@ -89,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8623d387-10c3-4bc4-b5da-b557b8ec3149",
    "metadata": {},
    "outputs": [
@@ -113,14 +159,15 @@
     }
    ],
    "source": [
-    "# Print the dataframe schema.\n",
+    "# Parquet files maintain the schema along with the data.\n",
+    "# Print the dataframe schema. \n",
     "\n",
     "car_df.printSchema()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a3334550-1c32-4b26-810f-54648b259ac6",
    "metadata": {},
    "outputs": [
@@ -164,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "425544e0-7e82-43a2-9f37-5d852eaf83e0",
    "metadata": {},
    "outputs": [
@@ -172,7 +219,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 2:===================>                                       (2 + 4) / 6]\r"
+      "[Stage 2:=======================================>                   (4 + 2) / 6]\r"
      ]
     },
     {
@@ -182,11 +229,11 @@
       "+-----------+-----+\n",
       "|partitionId|count|\n",
       "+-----------+-----+\n",
-      "|          2|   50|\n",
-      "|          4|   50|\n",
-      "|          0|   50|\n",
       "|          3|   50|\n",
+      "|          0|   50|\n",
+      "|          2|   50|\n",
       "|          5|   50|\n",
+      "|          4|   50|\n",
       "|          1|   51|\n",
       "+-----------+-----+\n",
       "\n"
@@ -221,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "132928f4-8f61-4212-a33d-a59ef9fb09e3",
    "metadata": {},
    "outputs": [
@@ -250,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "763d3d8d-fa2c-41d1-bf06-2d4adc1d31ab",
    "metadata": {},
    "outputs": [
@@ -307,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "db876bcb-a88a-4f4e-a342-57221aaf885f",
    "metadata": {},
    "outputs": [
@@ -341,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b236d96f-f3b4-40bb-8a49-8d1c3c3ecab7",
    "metadata": {},
    "outputs": [],
@@ -361,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6ac88d45-edf1-4ea0-b875-b1fc6aaf1413",
    "metadata": {},
    "outputs": [
@@ -409,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2d3da80d-1701-4d44-bb65-058d3b2c47ff",
    "metadata": {},
    "outputs": [
@@ -448,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1a7e8dd4-907f-4fe2-bd7d-7e4d01d9d5f2",
    "metadata": {},
    "outputs": [],
@@ -481,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "9ca1cc86-8e8f-4af0-b6b6-49c94ca4a2c1",
    "metadata": {},
    "outputs": [
@@ -521,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "918014d0-b50a-46d1-a4f7-7ffcec903c5d",
    "metadata": {},
    "outputs": [
@@ -564,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e52917ba-fc9e-458d-bcd3-bd2216804565",
    "metadata": {},
    "outputs": [
@@ -595,17 +642,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e20c5197-9486-4509-b6ca-5a1fb1860349",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor_15b81f2ff96f"
+       "RandomForestRegressor_ab975c1dfd07"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "31139a0c-5e41-4da2-9b44-2d7c531892ac",
    "metadata": {},
    "outputs": [
@@ -649,15 +696,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/03/31 16:17:28 WARN DAGScheduler: Broadcasting large task binary with size 1361.6 KiB\n",
-      "22/03/31 16:17:29 WARN DAGScheduler: Broadcasting large task binary with size 1952.2 KiB\n",
-      "22/03/31 16:17:29 WARN DAGScheduler: Broadcasting large task binary with size 2.5 MiB\n",
-      "22/03/31 16:17:30 WARN DAGScheduler: Broadcasting large task binary with size 3.1 MiB\n",
-      "22/03/31 16:17:31 WARN DAGScheduler: Broadcasting large task binary with size 3.5 MiB\n",
-      "22/03/31 16:17:32 WARN DAGScheduler: Broadcasting large task binary with size 3.8 MiB\n",
-      "22/03/31 16:17:32 WARN DAGScheduler: Broadcasting large task binary with size 3.3 MiB\n",
-      "22/03/31 16:17:33 WARN DAGScheduler: Broadcasting large task binary with size 2.6 MiB\n",
-      "22/03/31 16:17:33 WARN DAGScheduler: Broadcasting large task binary with size 1456.1 KiB\n"
+      "22/04/01 14:35:20 WARN DAGScheduler: Broadcasting large task binary with size 1351.5 KiB\n",
+      "22/04/01 14:35:20 WARN DAGScheduler: Broadcasting large task binary with size 1923.5 KiB\n",
+      "22/04/01 14:35:21 WARN DAGScheduler: Broadcasting large task binary with size 2.5 MiB\n",
+      "22/04/01 14:35:22 WARN DAGScheduler: Broadcasting large task binary with size 3.0 MiB\n",
+      "22/04/01 14:35:23 WARN DAGScheduler: Broadcasting large task binary with size 3.5 MiB\n",
+      "22/04/01 14:35:23 WARN DAGScheduler: Broadcasting large task binary with size 3.7 MiB\n",
+      "22/04/01 14:35:24 WARN DAGScheduler: Broadcasting large task binary with size 3.4 MiB\n",
+      "22/04/01 14:35:25 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/04/01 14:35:25 WARN DAGScheduler: Broadcasting large task binary with size 1380.2 KiB\n"
      ]
     }
    ],
@@ -671,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "61e46720-1402-4d8d-9476-9f873327fdf7",
    "metadata": {},
    "outputs": [
@@ -679,15 +726,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------------------------+-------------------+-------------+\n",
-      "|algorithmic_input                     |prediction         |Selling_Price|\n",
-      "+--------------------------------------+-------------------+-------------+\n",
-      "|[0.47,21000.0,0.0,9.0,1.0,0.0,0.0,1.0]|0.33882113444809425|0.27         |\n",
-      "|[0.74,5000.0,0.0,7.0,1.0,0.0,0.0,1.0] |0.5792188833732439 |0.65         |\n",
-      "|[0.99,45000.0,0.0,9.0,1.0,0.0,0.0,1.0]|0.518399004410532  |0.5          |\n",
-      "|[6.8,33019.0,0.0,8.0,1.0,0.0,1.0,1.0] |4.1583864987559815 |3.75         |\n",
-      "|[5.8,40023.0,0.0,7.0,1.0,0.0,1.0,1.0] |4.57722290710424   |4.0          |\n",
-      "+--------------------------------------+-------------------+-------------+\n",
+      "+--------------------------------------+------------------+-------------+\n",
+      "|algorithmic_input                     |prediction        |Selling_Price|\n",
+      "+--------------------------------------+------------------+-------------+\n",
+      "|[0.47,21000.0,0.0,9.0,1.0,0.0,0.0,1.0]|0.3415947138047934|0.27         |\n",
+      "|[0.74,5000.0,0.0,7.0,1.0,0.0,0.0,1.0] |0.5900377281530412|0.65         |\n",
+      "|[0.99,45000.0,0.0,9.0,1.0,0.0,0.0,1.0]|0.5137814044487523|0.5          |\n",
+      "|[6.8,33019.0,0.0,8.0,1.0,0.0,1.0,1.0] |4.181475640109057 |3.75         |\n",
+      "|[5.8,40023.0,0.0,7.0,1.0,0.0,1.0,1.0] |4.581634519241991 |4.0          |\n",
+      "+--------------------------------------+------------------+-------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -712,25 +759,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "c36f02c3-f79b-4cf6-9df0-c16ff8074dc7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE) on test data = 1.7682\n",
-      "R Squared (R2) on test data = 0.879918\n",
-      "Mean Absolute Error (MAE) on test data = 0.858415\n",
-      "Mean Square Error (MSE) on test data = 3.12654\n"
+      "Root Mean Squared Error (RMSE) on test data = 1.7413\n",
+      "R Squared (R2) on test data = 0.883544\n",
+      "Mean Absolute Error (MAE) on test data = 0.827701\n",
+      "Mean Square Error (MSE) on test data = 3.03211\n"
      ]
     }
    ],
@@ -765,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "cc982d70-fc36-48a7-ad6b-3a3c42dc5d3d",
    "metadata": {},
    "outputs": [
@@ -793,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "7d4fb9fb-3df2-4a8e-b195-49eeb3bc8d66",
    "metadata": {},
    "outputs": [
@@ -811,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "09e778c0-902f-4ad8-9d8a-fbf0b2667232",
    "metadata": {},
    "outputs": [
@@ -841,11 +881,11 @@
       "\n",
       "\n",
       "The predictions dataframe\n",
-      "+----------------------------------------------------+-------------------+-------------+\n",
-      "|algorithmic_input                                   |prediction         |Selling_Price|\n",
-      "+----------------------------------------------------+-------------------+-------------+\n",
-      "|[0.4699999988079071,21000.0,0.0,9.0,1.0,0.0,0.0,1.0]|0.33882113444809425|0.27         |\n",
-      "+----------------------------------------------------+-------------------+-------------+\n",
+      "+----------------------------------------------------+------------------+-------------+\n",
+      "|algorithmic_input                                   |prediction        |Selling_Price|\n",
+      "+----------------------------------------------------+------------------+-------------+\n",
+      "|[0.4699999988079071,21000.0,0.0,9.0,1.0,0.0,0.0,1.0]|0.3415947138047934|0.27         |\n",
+      "+----------------------------------------------------+------------------+-------------+\n",
       "\n"
      ]
     }
@@ -885,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "3668c1c6-c979-445b-a0a4-92b12dc6fe5d",
    "metadata": {},
    "outputs": [],
@@ -918,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
