--- a/src/jupyter/helloworld.ipynb
+++ b/src/jupyter/helloworld.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "aaab92e4-714a-4533-ba94-3a77690177af",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/03/23 13:07:10 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/04/01 14:31:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "453d9661-e9e8-4b01-9453-b33029f837c2",
    "metadata": {},
    "outputs": [
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f3083a56-a6d2-4bc2-93e7-273bd96433e3",
    "metadata": {},
    "outputs": [
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "9b183059-2c18-4d75-918f-cfdcdd39d3cf",
    "metadata": {},
    "outputs": [
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "b9068b58-9195-48ef-9808-d13c5a061a31",
    "metadata": {},
    "outputs": [],
@@ -168,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1497f8c2-7f7d-4d34-9748-6e84bb776303",
+   "id": "f722336a-5385-4e2d-b376-c2b06abb5f60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -190,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
