Notebook and Java code updates

--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -23,9 +23,6 @@
    "cell_type": "markdown",
    "id": "7b2924a6-78de-4c76-bf90-488331b27782",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -133,9 +130,6 @@
    "cell_type": "markdown",
    "id": "ec82dc76-95d8-4ddc-9f95-7a96d3b20fcf",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -547,9 +541,6 @@
    "cell_type": "markdown",
    "id": "200a4bfa-2b92-4fb0-acba-6d7f723f8be5",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -615,9 +606,6 @@
    "cell_type": "markdown",
    "id": "a0ba0c39-aa7e-4c8e-b033-7892b7262422",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -760,7 +748,9 @@
     "# A SIDE NOTE ... APACHE ARROW\n",
     "\n",
     "# If using Apacke Arrow, creating a Spark dataframe from a pandas dataframe is much quicker.\n",
-    "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")\n",
+    "# We are already using apache arrow.. This line was executed above.\n",
+    "# spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")\n",
+    "\n",
     "%time df = spark.createDataFrame(car_pdf)\n",
     "print()\n",
     "print()\n",
@@ -776,9 +766,6 @@
    "cell_type": "markdown",
    "id": "b25c64e7-3796-4f63-bac1-2abfe624c46f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
