--- a/src/jupyter/2_car_data_predictions_MLlib.ipynb
+++ b/src/jupyter/2_car_data_predictions_MLlib.ipynb
@@ -206,7 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One-hot encoding. For string type input data, it is common to encode categorical features using StringIndexer first.\n",
+    "# One-hot encoding. For string type input data, it is common to \n",
+    "# encode categorical features using StringIndexer first.\n",
     "\n",
     "# Drop the columns I'm just about to create if they exist.\n",
     "car_df = car_df.drop('fuel_Type_vec', 'seller_type_vec', 'transmission_vec')\n",
@@ -217,6 +218,18 @@
     ")\n",
     "model = encoder.fit(car_df)\n",
     "car_df = model.transform(car_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c32a4074-6539-48bf-9128-40a88eed26dc",
+   "metadata": {},
+   "source": [
+    "# Visual One Hot encoding ? \n",
+    "\n",
+    "<img src=\"media/one_hot.png\" alt=\"one_hot\" width=\"800\"/>\n",
+    "\n",
+    "Image Source : https://medium.com/@michaeldelsole/what-is-one-hot-encoding-and-how-to-do-it-f0ae272f1179"
    ]
   },
   {
