--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -472,17 +472,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The point of the section above is : \n",
+    "# A point for the section above is this : \n",
     "\n",
-    "# Pandas is a very popular data analysis and manipulation tool.\n",
     "\n",
-    "# What you can do with Pandas transformations, you can do with Spark. \n",
-    "# I would argue the PySpark APIs are easier to read and work with than the Pandas APIs.\n",
+    "# PySpark APIs for working with data are quite easy to use and maybe even easier to work with than other APIs.. (Looking at you Pandas).\n",
     "\n",
     "\n",
     "# !! HOWEVER !! \n",
     "\n",
-    "# If you still want to use a Pandas API but benefit from Spark's distributed architecture, \n",
+    "# If you still want to something like a Pandas API but benefit from Spark's distributed architecture, \n",
     "# check out (Pandas API on Spark - used to be Koalas). This is new in Spark 3.2.\n",
     "\n",
     "# https://databricks.com/blog/2021/10/04/pandas-api-on-upcoming-apache-spark-3-2.html"
