--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -749,10 +749,11 @@
     "# We are already using apache arrow.. This line was executed above.\n",
     "# spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")\n",
     "\n",
+    "# How long does it take to create a Spark dataframe from a pandas dataframe if using Arrow?\n",
     "%time df = spark.createDataFrame(car_pdf)\n",
     "print()\n",
     "print()\n",
-    "# If using NOT using Apacke Arrow, creating a Spark dataframe from a pandas dataframe is much slower.\n",
+    "# If using NOT using Apacke Arrow, creating a Spark dataframe from a pandas dataframe should be slower.\n",
     "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"false\")\n",
     "%time df = spark.createDataFrame(car_pdf)\n",
     "\n",
